// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-select #render error should render component as expected 1`] = `
<gux-form-field-select>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error gux-show">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select aria-describedby="gux-form-field-error-i" aria-invalid="true" id="gux-form-field-input-i" name="e-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render help should render component as expected 1`] = `
<gux-form-field-select>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" name="e-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render indicator marks should render component as expected (1) 1`] = `
<gux-form-field-select>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select id="gux-form-field-input-i" name="lp-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render indicator marks should render component as expected (2) 1`] = `
<gux-form-field-select indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select id="gux-form-field-input-i" name="lp-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render indicator marks should render component as expected (3) 1`] = `
<gux-form-field-select indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select id="gux-form-field-input-i" name="lp-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-select>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select id="gux-form-field-input-i" name="lp-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-select>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select disabled="" id="gux-form-field-input-i" name="lp-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-select>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select id="gux-form-field-input-i" name="lp-1" required="" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render label-info should render component as expected 1`] = `
<gux-form-field-select>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select aria-describedby="gux-label-info-beta-i" id="gux-form-field-input-i" name="e-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <gux-label-info-beta id="gux-label-info-beta-i" slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render label-position should render component as expected (1) 1`] = `
<gux-form-field-select>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select id="gux-form-field-input-i" name="lp-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render label-position should render component as expected (2) 1`] = `
<gux-form-field-select label-position="above">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select id="gux-form-field-input-i" name="lp-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render label-position should render component as expected (3) 1`] = `
<gux-form-field-select label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select id="gux-form-field-input-i" name="lp-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;

exports[`gux-form-field-select #render label-position should render component as expected (4) 1`] = `
<gux-form-field-select label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input"></slot>
            <gux-icon decorative="" icon-name="custom/chevron-down-small-regular" size="small"></gux-icon>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <select id="gux-form-field-input-i" name="lp-1" slot="input">
    <option value="option1">
      Option 1
    </option>
    <option value="option2">
      Option 2
    </option>
    <option value="option3">
      Option 3
    </option>
  </select>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-select>
`;
